--- a/src/components/Form/components/FormInput/components/Choices/styles.scss
+++ b/src/components/Form/components/FormInput/components/Choices/styles.scss
@@ -7,6 +7,10 @@
     display: flex;
   }
 
+  &__toggle {
+    margin-top: .5rem;
+  }
+
   .form-choice {
     display: flex;
     margin-right: 1rem;
